fix: Implement flagship top/bottom spacing

--- a/react/CozyDialogs/styles.styl
+++ b/react/CozyDialogs/styles.styl
@@ -5,6 +5,7 @@
     top 1.15rem
     right 1.15rem
     z-index var(--zIndex-modal) //needed for an iOS bug https://github.com/cozy/cozy-ui/pull/1790
+    transform translateY(var(--flagship-top-height))
     +small-screen()
         top 0.25rem
         right 0.25rem
