--- a/react/Viewer/styles.styl
+++ b/react/Viewer/styles.styl
@@ -17,6 +17,10 @@ $viewerMarginTopMedium = $toolbarHeightMedium - $footerHeight
     background      var(--charcoalGrey)
     color           var(--white)
 
+    .flagship-app &
+        padding-top var(--flagship-top-height)
+        padding-bottom var(--flagship-bottom-height)
+
     +medium-screen()
         color var(--charcoalGrey)
         background var(--white)
